--- a/Space-Invaders-Game/index.html
+++ b/Space-Invaders-Game/index.html
@@ -1,4 +1,7 @@
-<canvas>
-</canvas>
+
+<div id = 'main'>
+    <p><span>Score:</span> <span id="scoreEl">0</span></p>
+    <canvas></canvas>
+</div>
 <link rel="stylesheet" href="style.css">
 <script src="index.js"></script> 
